# packages-jpl

./: .gitignore  CMakeLists.txt  ChangeLog  ISSUES  LICENSE  Makefile.in  Makefile.mak  README.MacOS  README.html  README.md  config.h.cmake  configure.ac  configure.in  demo.pl  jpl.doc  jpl.pl  jpl.plx  jpl_config.pl  jpl_exceptions.pl  pltotex.pl  pom.xml  setup-swi-local-lib.sh  test-java.sh  test_jpl.pl
ac/: ac_jni_include_dirs.m4  ac_prog_jar.m4  ac_prog_java.m4  ac_prog_java_works.m4  ac_prog_javac.m4  ac_prog_javac_works.m4  ac_prog_javadoc.m4
cmake/: JUnit.cmake
docs/: .gitignore  CNAME  Deployment.md  DeploymentInstall.md  DeploymentJava.md  DeploymentLinux.md  DeploymentMacos.md  DeploymentWindows.md  DevelopingJPL.md  DevelopmentJPL-Arch.md  DevelopmentJPL-Devel.md  DevelopmentJPL-Live.md  DevelopmentJPL-Setup.md  DevelopmentJPL-Test.md  DevelopmentJPL.md  GettingStartedAnExampleTutorial.md  INSTALL.md  JPLunderMacOS.md  JavaAPI.md  JavaApi.md  JavaApiOverview.md  LICENSE.md  License.md  Multi-Threaded-Queries.md  PrologAPI.md  PrologApi.md  PrologApiOverview.md  PrologApiReference.md  README.md  RELEASE-NOTES.md  ReleaseNotes.md  ReleaseNotes202.md  ReleaseNotes300.md  ReleaseNotes302.md  ReleaseNotes303.md  ReleaseNotes701.md  ReleaseNotes740.md  ReleaseNotes750.md  ReleaseNotes760.md  ReleaseNotes761.md  (+15 more)
src/c/: jpl.c
src/java/: CMakeLists.txt  Makefile.in  Makefile.mak
src/java/jpl/: Atom.java  Compound.java  Float.java  Integer.java  JPL.java  JPLException.java  JRef.java  PrologException.java  Query.java  Term.java  Util.java  Variable.java  Version.java
src/java/jpl/fli/: BooleanHolder.java  DoubleHolder.java  Int64Holder.java  IntHolder.java  LongHolder.java  ObjectHolder.java  PointerHolder.java  Prolog.java  StringHolder.java  atom_t.java  engine_t.java  fid_t.java  functor_t.java  module_t.java  predicate_t.java  qid_t.java  term_t.java
src/java/jpl/test/: CelsiusConverter.java  Family.java  FetchBigTree.java  FetchLongList.java  Ga.java  Garbo.java  JPLTest.java  Masstest.java  ShadowA.java  ShadowB.java  Test.java  TestJUnit.java  TestOLD.java
src/java/jpl/util/: Getenv.java  HashedRefs.java  Mod.java  Overload.java  Overload2.java  PopupMenuDemo.java  Prog.java  SwingGadget.java  SwingGadget2.java  Test1.java  Test2.java  Util.java  Util2.java  Xfer.java
src/java/org/jpl7/: Atom.java  Compound.java  Dict.java  Float.java  Integer.java  JObject.java  JPL.java  JPLException.java  JRef.java  PrologException.java  Query.java  Rational.java  Term.java  Util.java  Variable.java  Version.java
src/java/org/jpl7/fli/: BooleanHolder.java  DoubleHolder.java  Int64Holder.java  IntHolder.java  LongHolder.java  ObjectHolder.java  PointerHolder.java  Prolog.java  StringHolder.java  atom_t.java  engine_t.java  fid_t.java  functor_t.java  module_t.java  predicate_t.java  qid_t.java  term_t.java
src/java/org/jpl7/test/: CelsiusConverter.java  Family.java  FetchBigTree.java  FetchLongList.java  Ga.java  Ga2.java  Garbo.java  JPLTest.java  JPLTestSuite.java  JPLTestSuiteRunner.java  Masstest.java  MaxObjects.java  QuotedName.java  SyntaxError.java  Test.java  TestJUnit.java  TestJUnit4.java  TestOLD.java  Versions.java  test_jpl.pl  test_quoted_module.pl
src/java/org/jpl7/test/junit/: AtomTest.java  DataManagement.java  GetSolution.java  IntegerTest.java  JPLTest.java  JRef.java  ListTest.java  ModuleTest.java  MutualRecursion.java  QueryBuilder.java  RationalTest.java  ReportPrologFlags.java  ReportPrologInfo.java  StringTest.java  Test_Data.java  Test_Dict.java  Test_Equals.java  Test_Module.java  Test_QueryBuilder.java  Test_Report.java  Test_Variables.java  Tests.java  TypesTest.java  Unicode.java  Variables.java  quoted_name.pl
src/java/org/jpl7/test/seb/: IterationQuery.java  QuotedName.java
src/java/org/jpl7/test/standalone/: CelsiusConverter.java  FetchBigTree.java  FetchLongList.java  Ga.java  GetSolution.java  IterationQuery.java  JRef.java  Masstest.java  QueryBuilder.java  QuotedName.java  ReportPrologFlags.java  Versions.java  quoted_name.pl
src/java/org/jpl7/util/: HashedRefs.java  Overload.java  PopupMenuDemo.java  Prog.java  SwingGadget.java  SwingGadget2.java  Test2.java  Util.java  Xfer.java
src/main/java/: CMakeLists.txt
src/main/java/org/jpl7/: Atom.java  Compound.java  Dict.java  Float.java  Integer.java  JRef.java  PrologException.java  Query.java  Rational.java  Term.java  Util.java  Variable.java  Version.java
src/main/java/org/jpl7/fli/: Int64Holder.java  LongHolder.java  Prolog.java  TermHolder.java  atom_t.java  module_t.java  qid_t.java  term_t.java
src/main/java/org/jpl7/test/: ShadowA.java  ShadowB.java  Test.java
src/main/java/org/jpl7/test/junit/: JPLTest.java  Test_Atom.java  Test_Equals.java  Test_GetSolution.java  Test_Integer.java  Test_JRef.java  Test_List.java  Test_MutualRecursion.java  Test_QueryBuilder.java  Test_Rational.java  Test_Report.java  Test_String.java  Test_Types.java  Test_Unicode.java  Test_Variables.java  Tests.java
src/main/java/org/jpl7/test/standalone/: CelsiusConverter.java  Family.java  FetchLongList.java  Ga2.java  Garbo.java  SyntaxError.java  Versions.java  family.pl
src/main/java/org/jpl7/util/: Getenv.java  Mod.java  Overload2.java  PopupMenuDemo.java  SwingGadget2.java  Test1.java  Util.java  Util2.java  Xfer.java
src/test/java/: CMakeLists.txt
src/test/java/org/jpl7/: JPLTestSuite.java  JPLTestSuiteRunner.java  ShadowA.java  ShadowB.java  Test.java  test.pl  test_quoted_module.pl
src/test/java/org/jpl7/junit/: JPLTest.java  Test_Atom.java  Test_Data.java  Test_Dict.java  Test_Equals.java  Test_Exceptions.java  Test_GetSolution.java  Test_Integer.java  Test_JRef.java  Test_List.java  Test_Module.java  Test_MutualRecursion.java  Test_QueryBuilder.java  Test_Rational.java  Test_Report.java  Test_String.java  Test_Types.java  Test_Unicode.java  Test_Variables.java  Tests.java
src/test/java/org/jpl7/standalone/: CelsiusConverter.java  Family.java  FetchBigTree.java  FetchLongList.java  Ga.java  Ga2.java  Garbo.java  Masstest.java  SyntaxError.java  Versions.java
(+140 files in other folders)
